--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 -->
 <html>
 	<head>
+		...
+		<script src="https://app.secureprivacy.ai/script/6901e22a7c0cfdac80d6fa67.js"></script>
 		<title>Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -637,4 +639,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
