--- a/single.html
+++ b/single.html
@@ -6,6 +6,8 @@
 -->
 <html>
 	<head>
+		...
+		<script src="https://app.secureprivacy.ai/script/6901e22a7c0cfdac80d6fa67.js"></script>
 		<title>Single - Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -143,4 +145,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
