prepare github pages deployment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://app.secureprivacy.ai/script/6901e22a7c0cfdac80d6fa67.js"></script>
 	</head>
 	<body class="is-preload">
@@ -638,8 +638,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
-
 </html>
-
-
-
