--- a/index.html
+++ b/index.html
@@ -611,6 +611,24 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Learn More</a></li>
+									<iframe
+  height="600"
+  width="100%"
+  frameborder="0"
+  style="border:1px solid #d0daeb;border-radius:12px"
+  onload="(function(frame,config){var contentWindow=frame.contentWindow;var script=document.createElement('script');script.src='https:\/\/cmp.secureprivacy.ai\/sp-embed-policy.js';contentWindow.spEmbedData=config;contentWindow.document.head.appendChild(script)})(this,
+  {
+    adminId:'3214',
+    pageUrl:window.location.href,
+    initialLanguage:'en',
+    policyIds:['67164f5a95700e52e6150838'],
+    displayHeader:true,
+    displaySidebar:true,
+    fitContentHeight:false,
+    removeContentPadding:false
+  })"
+>
+</iframe>
 								</ul>
 							</section>
 
@@ -640,3 +658,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
