--- a/index.html
+++ b/index.html
@@ -623,27 +623,36 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-																<iframe
-  height="600"
-  width="100%"
-  frameborder="0"
-  style="border:1px solid #d0daeb;border-radius:12px"
-  onload="(function(frame,config){var contentWindow=frame.contentWindow;var script=document.createElement('script');script.src='https:\/\/cmp.secureprivacy.ai\/sp-embed-policy.js';contentWindow.spEmbedData=config;contentWindow.document.head.appendChild(script)})(this,
-  {
-    adminId:'3214',
-    pageUrl:window.location.href,
-    initialLanguage:'en',
-    policyIds:['67164f5a95700e52e6150838'],
-    displayHeader:true,
-    displaySidebar:true,
-    fitContentHeight:false,
-    removeContentPadding:false
-  })"
->
-</iframe>
+		
 								</ul>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
 							</section>
+<!-- Privacy Policy Embed -->
+<section id="privacy-policy" style="margin: 2em 0;">
+  <h3>Privacy Policy</h3>
+  <iframe
+    height="600"
+    width="100%"
+    frameborder="0"
+    style="border:1px solid #d0daeb;border-radius:12px"
+    onload="(function(frame,config){
+      var contentWindow=frame.contentWindow;
+      var script=document.createElement('script');
+      script.src='https://cmp.secureprivacy.ai/sp-embed-policy.js';
+      contentWindow.spEmbedData=config;
+      contentWindow.document.head.appendChild(script)
+    })(this,{
+      adminId:'3214',
+      pageUrl:window.location.href,
+      initialLanguage:'en',
+      policyIds:['67164f5a95700e52e6150838'],
+      displayHeader:true,
+      displaySidebar:true,
+      fitContentHeight:false,
+      removeContentPadding:false
+    })"
+  ></iframe>
+</section>
 
 					</section>
 
@@ -659,5 +668,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
