--- a/policy.html
+++ b/policy.html
@@ -1,1 +1,25 @@
-
+<html>
+  <head>
+    <script src="https://app.secureprivacy.ai/script/69032e4e7c0cfdac80df0631.js"></script>
+  </head>
+  <body>
+    <iframe
+  height="600"
+  width="100%"
+  frameborder="0"
+  style="border:1px solid #d0daeb;border-radius:12px"
+  onload="(function(frame,config){var contentWindow=frame.contentWindow;var script=document.createElement('script');script.src='https:\/\/cmp.secureprivacy.ai\/sp-embed-policy.js';contentWindow.spEmbedData=config;contentWindow.document.head.appendChild(script)})(this,
+  {
+    adminId:'3214',
+    pageUrl:window.location.href,
+    initialLanguage:'en',
+    policyIds:['67164f5a95700e52e6150838'],
+    displayHeader:true,
+    displaySidebar:true,
+    fitContentHeight:false,
+    removeContentPadding:false
+  })"
+>
+</iframe>
+  </body>
+</html>
