--- a/index.html
+++ b/index.html
@@ -625,8 +625,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 											
 								</ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
-							<a href="policy.html">Privacy policy</a>
+								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.
+							<a href="policy.html">Privacy policy</a></p>
 							</section>
 					</section>
 
@@ -642,6 +642,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
