--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											
 								</ul>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.
-							<a href="policy.html">Privacy policy</a></p>
+							<a href="privacy.html" style="color: blue; text-decoration: underline;">Privacy Policy</a></p>
 							</section>
 					</section>
 
@@ -642,6 +642,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
