--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://app.secureprivacy.ai/script/69032e4e7c0cfdac80df0631.js"></script>
 		<!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/49758775.js"></script>
+<script>
+  function loadHubSpot() {
+    if (window.hubspotLoaded) return;
+
+    var hs = document.createElement("script");
+    hs.type = "text/javascript";
+    hs.async = true;
+    hs.src = "//js-na1.hs-scripts.com/49758775.js";
+    document.head.appendChild(hs);
+
+    window.hubspotLoaded = true;
+  }
+</script>
+
 <!-- End of HubSpot Embed Code -->
 	</head>
 	<body class="is-preload">
@@ -656,6 +669,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
