--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   src="//js-na1.hs-scripts.com/49758775.js">
 </script>
 <!-- End of HubSpot Embed Code -->
+		<script>
+SecurePrivacy.onConsentGranted('analytics', function () {
+  loadHubSpot();
+});
+</script>
 			</head>
 	<body class="is-preload">
 		<!-- Google Tag Manager (noscript) -->
@@ -662,6 +667,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
