--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script
   type="text/javascript"
   id="hs-script-loader"
-    src="//js-na1.hs-scripts.com/49758775.js">
+  defer
+  src="//js-na1.hs-scripts.com/49758775.js">
 </script>
 <!-- End of HubSpot Embed Code -->
 				</head>
@@ -660,6 +661,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
