--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script
   type="text/javascript"
   id="hs-script-loader"
-  defer
-  src="//js-na1.hs-scripts.com/49758775.js">
+    src="//js-na1.hs-scripts.com/49758775.js">
 </script>
 <!-- End of HubSpot Embed Code -->
+		<script
+  type="text/plain"
+  data-cookiecategory="analytics"
+  src="//js-na1.hs-scripts.com/49758775.js">
+</script>
+
 				</head>
 	<body class="is-preload">
 		<!-- Google Tag Manager (noscript) -->
@@ -661,6 +666,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
