--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 <!-- End of HubSpot Embed Code -->
 		<script
-  type="text/plain"
+  type="text/javascript"
   data-cookiecategory="analytics"
   src="//js-na1.hs-scripts.com/49758775.js">
 </script>
@@ -666,6 +666,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
